# pruning_wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  config.py  main.py  prologue.py  run.sh  utils.py
benchmark/: profiler.py
csrc/: mlp.cu
csrc/include/: mlp.cuh  utils.cuh
ops/: __init__.py  approximator.py  attention_threshold.py  cache.py  index.py  mask.py  router.py  utils.py
ops/attention/: base.py  kv_pruning.py  pv_pruning.py  query_head_group_pruning.py  query_head_pruning.py  query_pruning.py  test.py
ops/attention/gluon_kernel/: __init__.py  prefill.py  prefill_sm120.py
ops/attention/tilelang_kernel/: decode_sparse.py  prefill_sparse.py
ops/attention/triton_kernel/: decode.py  decode_sparse.py  prefill.py  prefill_sparse.py
ops/mlp/: base.py  bk_pruning.py  bm_pruning.py  bn_pruning.py  semi_sparse_pruning.py  static_width_pruning.py  structured_sparse_linear.py  test.py  utils.py
ops/mlp/gluon_kernel/: mlp.py  mlp_sm120.py  mlp_sm80.py
ops/mlp/jit_kernel/: cusparselt_spmm.cuh
ops/mlp/tilelang_kernel/: ffn.py  mlp.py  spmm.py
ops/mlp/triton_kernel/: ffn.py  glu.py  mlp.py
wrapper/: base.py  post_loader.py
wrapper/static/: __init__.py  dense.py  dense.yaml  structured.py  structured.yaml  structured_kn.yaml  structured_layer.yaml  structured_nk.yaml  structured_sublayer.yaml  unstructured.py  unstructured.yaml
wrapper/token_dynamic/: __init__.py  bm.yaml  bn.yaml  skipgpt.py  skipgpt.yaml  sparse_attention.py  sparse_attention.yaml
